--- a/index.html
+++ b/index.html
@@ -12,267 +12,322 @@
 </head>
 
 <body>
-  <header>
-    <img src="img/IMG_3091.JPG" alt="ケーキの画像" class="top-img">
-    <div class="title-1">
-      <h1>little sweets</h1>
-      <P>小さなお菓子教室</p>
-    </div>
-    <div class="title-2">
-      <div>
-        <p><a href=""><img src="img/insta.png" style="width: 30px; height: 30px;"></a></p>
+  <div class="body-wrapper">
+    <header>
+      <img src="img/IMG_3091.JPG" alt="ケーキの画像" class="top-img">
+      <div class="title-1">
+        <h1>little sweets</h1>
+        <P>小さなお菓子教室</p>
       </div>
-      <div>
-        <p><a href=""><img src="img/YouTube.png" style="width: 30px; height: 30px;"></a></p>
-      </div>
-      <div class="reservation">
-        <p>ご予約はこちら<span class="material-symbols-outlined">arrow_forward_ios</span></p>
-      </div>
-    </div>
-
-    <ul>
-      <li>
-        <h2>ごあいさつ</h2>
-        <span>Concept</span>
-      </li>
-
-      <li>
-        <h2>レッスン内容</h2>
-        <span>Lesson</span>
-      </li>
-
-      <li>
-        <h2>教室のご案内</h2>
-        <span>Information</span>
-      </li>
-
-      <li>
-        <h2>お知らせ</h2>
-        <span>News</span>
-      </li>
-
-      <li>
-        <h2>お問い合わせ</h2>
-        <span>Contact</span>
-      </li>
-    </ul>
-  </header>
-
-  <main>
-    <section>
-      <div class="news">
-        <span>News</span>
-        <h3>最新のお知らせ</h3>
+      <div class="title-2">
+        <div>
+          <p><a href=""><img src="img/insta.png" style="width: 30px; height: 30px;"></a></p>
+        </div>
+        <div>
+          <p><a href=""><img src="img/YouTube.png" style="width: 30px; height: 30px;"></a></p>
+        </div>
+        <div class="reservation">
+          <p>ご予約はこちら<span class="material-symbols-outlined">arrow_forward_ios</span></p>
+        </div>
       </div>
 
-      <div class="list">
+      <ul>
+        <li>
+          <h2>ごあいさつ</h2>
+          <span>Concept</span>
+        </li>
+
+        <li>
+          <h2>レッスン内容</h2>
+          <span>Lesson</span>
+        </li>
+
+        <li>
+          <h2>教室のご案内</h2>
+          <span>Information</span>
+        </li>
+
+        <li>
+          <h2>お知らせ</h2>
+          <span>News</span>
+        </li>
+
+        <li>
+          <h2>お問い合わせ</h2>
+          <span>Contact</span>
+        </li>
+      </ul>
+    </header>
+
+    <main>
+      <section>
+        <div class="news">
+          <span>News</span>
+          <h3>最新のお知らせ</h3>
+        </div>
+
+        <div class="list">
+          <article>
+            <img src="img/IMG_3083.JPG" alt="スイーツ">
+            <p>6月のレッスン「ブルーベリータルト」</p>
+            <span></span>
+          </article>
+
+          <article>
+            <img src="img/IMG_3084.JPG" alt="スイーツ">
+            <p>7月のレッスン「しっとりマドレーヌ」</p>
+            <span></span>
+          </article>
+
+          <article>
+            <img src="img/IMG_3085.JPG" alt="スイーツ">
+            <p>8月のレッスン「オリジナルクッキー」</p>
+            <span></span>
+          </article>
+        </div>
+        <div class="notice">
+          <p>すべてのお知らせ
+            <span class="material-symbols-outlined">
+              arrow_forward_ios
+            </span>
+          </p>
+        </div>
+      </section>
+
+      <section class="classroom">
+        <div class="class">
+          <span>Concept</span>
+          <h3>暮らしに寄り添う<br>
+            小さなお菓子教室</h3>
+
+          <p class="class-2">littole sweetsは、<br>
+            ・・・・・・・・・・・・・・・・・・・・・<br>
+            ・・・・・・・・・・・・・・・・・・・・・<br>
+            ・・・・・・・・・・・・。</p>
+        </div>
+        <img src="img/IMG_3086.JPG" alt="アップル">
+      </section>
+
+      <div class="room">
+        <img src="img/ルーム.JPG" alt="ルーム">
+      </div>
+
+      <section>
         <article>
-          <img src="img/IMG_3083.JPG" alt="スイーツ">
-          <p>6月のレッスン「ブルーベリータルト」</p>
-          <span></span>
-        </article>
+          <div class="lesson">
+            <img class="egg" src="img/IMG_3088.JPG" alt="たまご">
+            <img class="cake" src="img/IMG_3087.JPG" alt="ケーキ">
+            <div class="lesson-2">
+              <span>Lesson</span>
+              <h3>レッスン内容</h3>
+              <p>少人数制のレッスンを毎月開催しています。<br>
+                お菓子作り未経験の方も大歓迎です。</p>
 
+              <div class="content">
+                <dl>
+                  <dt>内容</dt>
+                  <dd>季節のイベントや旬のスイーツを<br>お楽しみいただける単発レッスン</dd>
+                </dl>
+
+                <dl>
+                  <dt>所要時間</dt>
+                  <dd>3時間程度</dd>
+                </dl>
+
+                <dl>
+                  <dt>料金</dt>
+                  <dd>1回 4,400円(税込)</dd>
+                </dl>
+
+                <dl>
+                  <dt>持ち物</dt>
+                  <dd>エプロン、ハンドタオル</dd>
+                </dl>
+
+                <dl>
+                  <dt>場所</dt>
+                  <dd>〒⚪︎⚪︎⚪︎-⚪︎⚪︎⚪︎⚪︎<br>
+                    ⚪︎⚪︎都⚪︎区⚪︎⚪︎⚪︎⚪︎⚪︎⚪︎</dd>
+                </dl>
+              </div>
+              <div class="notice-2">
+                <p>ご予約はこちら
+                  <span class="material-symbols-outlined">
+                    arrow_forward_ios
+                  </span>
+                </p>
+              </div>
+            </div>
+        </article>
+      </section>
+
+      <section class="flow">
+        <img class="flow-img" src="img/IMG_3090.JPG" alt="画像背景">
         <article>
-          <img src="img/IMG_3084.JPG" alt="スイーツ">
-          <p>7月のレッスン「しっとりマドレーヌ」</p>
-          <span></span>
+          <div class="flow-2">
+            <div class="theme">
+              <span>Flow</span>
+              <h3>受講までの流れ</h3>
+            </div>
+
+            <div class="flow-3">
+              <dl>
+                <dt><img src="img/メールボックスアイコン1.png" alt="1"></dt>
+                <dd>
+                  <h4>事前のご予約</h4>
+                  <p>最新のレッスン内容をご確認のうえ、ご予約フォームよりご連絡ください。折り返し、日程調節メールをお送りします。</p>
+                </dd>
+              </dl>
+
+              <dl>
+                <dt><img src="img/家の線画イラスト.png" alt="2"></dt>
+                <dd>
+                  <h4>現地にて集合</h4>
+                  <p>当日は集合時間までに教室へお越しください。エプロン、ハンドタオルはご持参いただくようお願いいたします。</p>
+                </dd>
+              </dl>
+
+              <dl>
+                <dt><img src="img/時計の無料アイコン.png" alt="3"></dt>
+                <dd>
+                  <h4>レッスン開始</h4>
+                  <p>レシピについて講師よりご説明した後、実習形式でお一人ずつお菓子を作ります。所要時間は3時間程度を予定しております。</p>
+                </dd>
+              </dl>
+
+              <dl>
+                <dt><img src="img/フォーク.png" alt="4"></dt>
+                <dd>
+                  <h4>ティータイム</h4>
+                  <p>完成したお菓子を美味しい紅茶と一緒に試食します。専用ケースでそのままお持ち帰りいただくことも可能です。</p>
+                </dd>
+              </dl>
+
+              <dl>
+                <dt><img src="img/お会計.png" alt="5"></dt>
+                <dd>
+                  <h4>受講料</h4>
+                  <p>受講料をお支払いいただき、レッスン終了となります。現金もしくはクレジットカード払いがご利用いただけます。</p>
+                </dd>
+              </dl>
+            </div>
+          </div>
+
+          <div class="flow-4">
+            <article>
+              <div class="theme">
+                <span>Flow</span>
+                <h3>受講までの流れ</h3>
+              </div>
+              <dl>
+                <dt><img src="img/メールボックスアイコン1.png" alt="1"></dt>
+                <dd>
+                  <h4>事前のご予約</h4>
+                  <p>最新のレッスン内容をご確認のうえ、ご予約フォームよりご連絡ください。折り返し、日程調節メールをお送りします。</p>
+                </dd>
+              </dl>
+
+              <dl>
+                <dt><img src="img/家の線画イラスト.png" alt="2"></dt>
+                <dd>
+                  <h4>現地にて集合</h4>
+                  <p>当日は集合時間までに教室へお越しください。エプロン、ハンドタオルはご持参いただくようお願いいたします。</p>
+                </dd>
+              </dl>
+
+              <dl>
+                <dt><img src="img/時計の無料アイコン.png" alt="3"></dt>
+                <dd>
+                  <h4>レッスン開始</h4>
+                  <p>レシピについて講師よりご説明した後、実習形式でお一人ずつお菓子を作ります。所要時間は3時間程度を予定しております。</p>
+                </dd>
+              </dl>
+
+              <dl>
+                <dt><img src="img/フォーク.png" alt="4"></dt>
+                <dd>
+                  <h4>ティータイム</h4>
+                  <p>完成したお菓子を美味しい紅茶と一緒に試食します。専用ケースでそのままお持ち帰りいただくことも可能です。</p>
+                </dd>
+              </dl>
+
+              <dl>
+                <dt><img src="img/お会計.png" alt="5"></dt>
+                <dd>
+                  <h4>受講料</h4>
+                  <p>受講料をお支払いいただき、レッスン終了となります。現金もしくはクレジットカード払いがご利用いただけます。</p>
+                </dd>
+              </dl>
+          </div>
+
+
+
         </article>
+      </section>
 
-        <article>
-          <img src="img/IMG_3085.JPG" alt="スイーツ">
-          <p>8月のレッスン「オリジナルクッキー」</p>
-          <span></span>
-        </article>
-      </div>
-      <div class="notice">
-        <p>すべてのお知らせ
-          <span class="material-symbols-outlined">
-            arrow_forward_ios
-          </span>
-        </p>
-      </div>
-    </section>
-
-    <section class="classroom">
-      <div class="class">
-        <span>Concept</span>
-        <h3>暮らしに寄り添う<br>
-          小さなお菓子教室</h3>
-
-        <p class="class-2">littole sweetsは、<br>
-          ・・・・・・・・・・・・・・・・・・・・・<br>
-          ・・・・・・・・・・・・・・・・・・・・・<br>
-          ・・・・・・・・・・・・。</p>
-      </div>
-      <img src="img/IMG_3086.JPG" alt="アップル">
-    </section>
-
-    <div class="room">
-      <img src="img/ルーム.JPG" alt="ルーム">
-    </div>
-
-    <section>
-      <article>
-        <div class="lesson">
-          <img class="egg" src="img/IMG_3088.JPG" alt="たまご">
-          <img class="cake" src="img/IMG_3087.JPG" alt="ケーキ">
-          <div class="lesson-2">
-            <span>Lesson</span>
-            <h3>レッスン内容</h3>
-            <p>少人数制のレッスンを毎月開催しています。<br>
-              お菓子作り未経験の方も大歓迎です。</p>
-
-            <div class="content">
+      <section>
+        <div class="information">
+          <span>Information</span>
+          <h3>教室のご案内</h3>
+          <img src="img/map.jpeg" alt="マップ">
+        </div>
+        <div class="information-2">
+          <div class="content">
+            <div class="content-2">
               <dl>
-                <dt>内容</dt>
-                <dd>季節のイベントや旬のスイーツを<br>お楽しみいただける単発レッスン</dd>
-              </dl>
-
-              <dl>
-                <dt>所要時間</dt>
-                <dd>3時間程度</dd>
-              </dl>
-
-              <dl>
-                <dt>料金</dt>
-                <dd>1回 4,400円(税込)</dd>
-              </dl>
-
-              <dl>
-                <dt>持ち物</dt>
-                <dd>エプロン、ハンドタオル</dd>
-              </dl>
-
-              <dl>
-                <dt>場所</dt>
+                <dt>住所</dt>
                 <dd>〒⚪︎⚪︎⚪︎-⚪︎⚪︎⚪︎⚪︎<br>
                   ⚪︎⚪︎都⚪︎区⚪︎⚪︎⚪︎⚪︎⚪︎⚪︎</dd>
               </dl>
-            </div>
-            <div class="notice-2">
-              <p>ご予約はこちら
-                <span class="material-symbols-outlined">
-                  arrow_forward_ios
-                </span>
-              </p>
+
+              <dl>
+                <dt>TEL</dt>
+                <dd>00-0000-0000</dd>
+              </dl>
+
+              <dl>
+                <dt>MAIL</dt>
+                <dd>xxxxxxxxx@xxxxx.com</dd>
+              </dl>
             </div>
           </div>
-      </article>
-    </section>
 
-    <section class="flow">
-      <img src="img/IMG_3090.JPG" alt="画像背景">
-      <article class="flow-2">
-        <div class="theme">
-          <span>Flow</span>
-          <h3>受講までの流れ</h3>
-        </div>
-        <div class="flow-3">
-          <dl>
-            <dt><img src="img/メールボックスアイコン1.png" alt="1"></dt>
-            <dd>
-              <h4>事前のご予約</h4>
-              <p>最新のレッスン内容をご確認のうえ、ご予約フォームよりご連絡ください。折り返し、日程調節メールをお送りします。</p>
-            </dd>
-          </dl>
-
-          <dl>
-            <dt><img src="img/家の線画イラスト.png" alt="2"></dt>
-            <dd>
-              <h4>現地にて集合</h4>
-              <p>当日は集合時間までに教室へお越しください。エプロン、ハンドタオルはご持参いただくようお願いいたします。</p>
-            </dd>
-          </dl>
-
-          <dl>
-            <dt><img src="img/時計の無料アイコン.png" alt="3"></dt>
-            <dd>
-              <h4>レッスン開始</h4>
-              <p>レシピについて講師よりご説明した後、実習形式でお一人ずつお菓子を作ります。所要時間は3時間程度を予定しております。</p>
-            </dd>
-          </dl>
-
-          <dl>
-            <dt><img src="img/フォーク.png" alt="4"></dt>
-            <dd>
-              <h4>ティータイム</h4>
-              <p>完成したお菓子を美味しい紅茶と一緒に試食します。専用ケースでそのままお持ち帰りいただくことも可能です。</p>
-            </dd>
-          </dl>
-
-          <dl>
-            <dt><img src="img/お会計.png" alt="5"></dt>
-            <dd>
-              <h4>受講料</h4>
-              <p>受講料をお支払いいただき、レッスン終了となります。現金もしくはクレジットカード払いがご利用いただけます。</p>
-            </dd>
-          </dl>
-        </div>
-      </article>
-    </section>
-
-    <section>
-      <div class="information">
-        <span>Information</span>
-        <h3>教室のご案内</h3>
-        <img src="img/map.jpeg" alt="マップ">
-      </div>
-      <div class="information-2">
-        <div class="content">
-          <div class="content-2">
-            <dl>
-              <dt>住所</dt>
-              <dd>〒⚪︎⚪︎⚪︎-⚪︎⚪︎⚪︎⚪︎<br>
-                ⚪︎⚪︎都⚪︎区⚪︎⚪︎⚪︎⚪︎⚪︎⚪︎</dd>
-            </dl>
-
-            <dl>
-              <dt>TEL</dt>
-              <dd>00-0000-0000</dd>
-            </dl>
-
-            <dl>
-              <dt>MAIL</dt>
-              <dd>xxxxxxxxx@xxxxx.com</dd>
-            </dl>
+          <div class="lecturer">
+            <small>代表講師</small>
+            <h5>⚪︎⚪︎⚪︎ ⚪︎⚪︎⚪︎⚪︎</h5>
+            <p>製菓専門学校を卒業後、都内の人気洋菓子店でパティシエとして勤務。<br>20018年に独立し、お菓子教室”little
+              sweets”を開業。<br>生徒の皆様が自然と笑顔になれるようなアットホームなお菓子教室を目指しています。</p>
           </div>
         </div>
-
-        <div class="lecturer">
-          <small>代表講師</small>
-          <h5>⚪︎⚪︎⚪︎ ⚪︎⚪︎⚪︎⚪︎</h5>
-          <p>製菓専門学校を卒業後、都内の人気洋菓子店でパティシエとして勤務。<br>20018年に独立し、お菓子教室”little
-            sweets”を開業。<br>生徒の皆様が自然と笑顔になれるようなアットホームなお菓子教室を目指しています。</p>
+      </section>
+    </main>
+    <footer>
+      <div class="scroll-infinity">
+        <div class="scroll-infinity__wrap">
+          <ul class="scroll-infinity__list scroll-infinity__list--right">
+            <li class="scroll-infinity__item"><img src="img/IMG_0045.JPG" /></li>
+            <li class="scroll-infinity__item"><img src="img/IMG_0047.JPG" /></li>
+            <li class="scroll-infinity__item"><img src="img/IMG_0046.JPG" /></li>
+            <li class="scroll-infinity__item"><img src="img/IMG_0048.JPG" /></li>
+            <li class="scroll-infinity__item"><img src="img/IMG_0050.JPG" /></li>
+            <li class="scroll-infinity__item"><img src="img/IMG_0049.JPG" /></li>
+          </ul>
+          <ul class="scroll-infinity__list scroll-infinity__list--right">
+            <li class="scroll-infinity__item"><img src="img/IMG_0045.JPG" /></li>
+            <li class="scroll-infinity__item"><img src="img/IMG_0047.JPG" /></li>
+            <li class="scroll-infinity__item"><img src="img/IMG_0046.JPG" /></li>
+            <li class="scroll-infinity__item"><img src="img/IMG_0048.JPG" /></li>
+            <li class="scroll-infinity__item"><img src="img/IMG_0050.JPG" /></li>
+            <li class="scroll-infinity__item"><img src="img/IMG_0049.JPG" /></li>
+          </ul>
         </div>
       </div>
-    </section>
-  </main>
-  <footer>
-    <div class="scroll-infinity">
-      <div class="scroll-infinity__wrap">
-        <ul class="scroll-infinity__list scroll-infinity__list--right">
-          <li class="scroll-infinity__item"><img src="img/IMG_0045.JPG" /></li>
-          <li class="scroll-infinity__item"><img src="img/IMG_0047.JPG" /></li>
-          <li class="scroll-infinity__item"><img src="img/IMG_0046.JPG" /></li>
-          <li class="scroll-infinity__item"><img src="img/IMG_0048.JPG" /></li>
-          <li class="scroll-infinity__item"><img src="img/IMG_0050.JPG" /></li>
-          <li class="scroll-infinity__item"><img src="img/IMG_0049.JPG" /></li>
-        </ul>
-        <ul class="scroll-infinity__list scroll-infinity__list--right">
-          <li class="scroll-infinity__item"><img src="img/IMG_0045.JPG" /></li>
-          <li class="scroll-infinity__item"><img src="img/IMG_0047.JPG" /></li>
-          <li class="scroll-infinity__item"><img src="img/IMG_0046.JPG" /></li>
-          <li class="scroll-infinity__item"><img src="img/IMG_0048.JPG" /></li>
-          <li class="scroll-infinity__item"><img src="img/IMG_0050.JPG" /></li>
-          <li class="scroll-infinity__item"><img src="img/IMG_0049.JPG" /></li>
-        </ul>
-      </div>
-    </div>
 
-    <div class="footer">
-      <small>&copy; 2025 little sweets</small>
-    </div>
-  </footer>
+      <div class="footer">
+        <small>&copy; 2025 little sweets</small>
+      </div>
+    </footer>
+  </div>
 </body>
 
 </html>
