--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
         <div class="list">
           <article>
             <img src="img/IMG_3083.JPG" alt="スイーツ">
-            <p>6月のレッスン「ブルーベリータルト」</p>
+            <p>6月のレッスン<br>「ブルーベリータルト」</p>
             <span></span>
           </article>
 
           <article>
             <img src="img/IMG_3084.JPG" alt="スイーツ">
-            <p>7月のレッスン「しっとりマドレーヌ」</p>
+            <p>7月のレッスン<br>「しっとりマドレーヌ」</p>
             <span></span>
           </article>
 
           <article>
             <img src="img/IMG_3085.JPG" alt="スイーツ">
-            <p>8月のレッスン「オリジナルクッキー」</p>
+            <p>8月のレッスン<br>「オリジナルクッキー」</p>
             <span></span>
           </article>
         </div>
@@ -265,7 +265,7 @@
         </article>
       </section>
 
-      <section>
+      <section class="information-1">
         <div class="information">
           <span>Information</span>
           <h3>教室のご案内</h3>
