--- a/index.html
+++ b/index.html
@@ -4,330 +4,161 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>sweets lesson</title>
-  <link rel="icon" href="img/IMG_3083.JPG">
+  <title>Beauty salon HP</title>
+  <link rel="icon" href="">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward_ios" />
+  <link rel="stylesheet" href="style--more.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
-  <div class="body-wrapper">
-    <header>
-      <img src="img/IMG_3091.JPG" alt="ケーキの画像" class="top-img">
-      <div class="title-1">
-        <h1>little sweets</h1>
-        <P>小さなお菓子教室</p>
-      </div>
-      <div class="title-2">
-        <div>
-          <p><a href=""><img src="img/insta.png" style="width: 30px; height: 30px;"></a></p>
-        </div>
-        <div>
-          <p><a href=""><img src="img/YouTube.png" style="width: 30px; height: 30px;"></a></p>
-        </div>
-        <div class="reservation">
-          <p>ご予約はこちら<span class="material-symbols-outlined">arrow_forward_ios</span></p>
-        </div>
-      </div>
+  <header>
+    <h1>氣清流バランス</h1>
+    <img src="img/coco-citta1.png" alt="coco-citta画像">
 
+    <div class="pc-menu">
+      <nav>
+        <ul>
+          <li><a href="">氣清流バランスケアとは</a></li>
+          <li><a href="">メニュー</a></li>
+          <li><a href="">お客様の声</a></li>
+          <li><a href="">アクセス</a></li>
+          <li><a href=""><img src="img/inquiry.jpeg" alt="説明画像" style="width: 60px; height: 35px;"></a></li>
+        </ul>
+    </div>
+
+    <div class="sp-menu">
+      <span class="material-icons" id="open">
+        menu
+      </span>
+    </div>
+  </header>
+
+  <div class="overlay">
+    <span class="material-icons" id="close">
+      close
+    </span>
+    <nav>
       <ul>
-        <li>
-          <h2>ごあいさつ</h2>
-          <span>Concept</span>
-        </li>
-
-        <li>
-          <h2>レッスン内容</h2>
-          <span>Lesson</span>
-        </li>
-
-        <li>
-          <h2>教室のご案内</h2>
-          <span>Information</span>
-        </li>
-
-        <li>
-          <h2>お知らせ</h2>
-          <span>News</span>
-        </li>
-
-        <li>
-          <h2>お問い合わせ</h2>
-          <span>Contact</span>
-        </li>
+        <li><a href="#">氣清流バランスケアとは</a></li>
+        <li><a href="#"></a>メニュー</li>
+        <li><a href="#"></a>お客様の声</li>
+        <li><a href="#"></a>アクセス</li>
+        <li><a href="#"></a>お問い合わせ</li>
       </ul>
-    </header>
+    </nav>
+  </div>
 
-    <main>
-      <section>
-        <div class="news">
-          <span>News</span>
-          <h3>最新のお知らせ</h3>
+  <main>
+    <section class="top--title">
+      <div class="sp--top--title">
+        <img class="sp--top--img" src="img/IMG_0076--2.JPG" alt="coco画像">
+
+        <div class="main-title">
+          <img src="img/coco-citta2.png" alt="coco-citta画像">
+          <h2>あなたのための<br>幸せレシピ</h2>
+          <p>氣清流バランスケアは氣エネルギーの調整を行い、<br>アトピーなどの症状をはじめ、<br>体の根本改善を目指します。</p>
+        </div>
+      </div>
+      <img class="top--img" src="img/IMG_0076.JPG" alt="coco画像">
+    </section>
+
+    <span></span>
+
+    <section>
+      <article class="top-wrap">
+        <div class="sp--top-wrap">
+          <img src="img/text1.png">
+          <h3><span>こんなお悩み</span>ありませんか?</h3>
+          <ul class="wrap">
+            <li><img src="img/concerns1.png"><br>
+              治療を続けても<br>ぶり返すアトピー</li>
+            <li><img src="img/concerns2.png"><br>
+              何となく<br>体調が悪い日が続く</li>
+            <li><img src="img/concerns3.png"><br>
+              肩こり・腰痛<br>などがずっと続いている</li>
+            <li><img src="img/concerns4.png"><br>
+              自律神経の<br>乱れを感じる</li>
+          </ul>
+        </div>
+      </article>
+
+      <article>
+        <div class="answer">
+          <span>そんな不定愁訴には</span>
+          <h2>氣清流バランスケア</h2>
+          <span>がおすすめです。</span>
         </div>
 
-        <div class="list">
-          <article>
-            <img src="img/IMG_3083.JPG" alt="スイーツ">
-            <p>6月のレッスン<br>「ブルーベリータルト」</p>
-            <span></span>
-          </article>
+        <img class="answer-img1" src="img/IMG_0067.JPG" alt="">
+        <img class="answer-img2" src="img/IMG_3292.JPG" alt="">
 
-          <article>
-            <img src="img/IMG_3084.JPG" alt="スイーツ">
-            <p>7月のレッスン<br>「しっとりマドレーヌ」</p>
-            <span></span>
-          </article>
+      </article>
+    </section>
 
-          <article>
-            <img src="img/IMG_3085.JPG" alt="スイーツ">
-            <p>8月のレッスン<br>「オリジナルクッキー」</p>
-            <span></span>
-          </article>
-        </div>
-        <div class="notice">
-          <p>すべてのお知らせ
-            <span class="material-symbols-outlined">
-              arrow_forward_ios
-            </span>
+    <section class="wonder">
+      <img class="text2" src="img/what is that.png" alt="テキスト">
+      <br>
+      <h4><span>氣清流バランスケア</span>ってナニモノ？</h4>
+      <p>心身ともに健やかであるために必要なこと。それは、氣エネルギーを正常に流動させ、<br>白流の選りと水分代割の帰りを改善すること。<br>
+        気清流バランスケアは、三白水の気エネルギーに着日し、エネルギー調整することで、<br>肉体園（白液・水分代謝）への伝達と、エネルギー面（魂・スピリチュアル）への伝報から起こる、<br>体内外の容を体感し、細胞レベルで気エネルギーの猪環を正常化させることを目指します。
+      </p>
+
+      <div class="wonder-explanation--1">
+        <img src="img/IMG_0073.JPG">
+        <div class="explanation--1">
+          <h5><span>氣清流</span>ってなに？</h5>
+          <p>
+            身能では「共常なし」と言われる。不定（染島）や要代用（うつ、バニック、自体調。00度旅日、アトピーなど）を。東洋医学や部車医学アーコルグェーダの点からカウンセリングし、結と心食のアンバランスでこる。新ネルギーの男期限を直常化させる諸術法です。
           </p>
         </div>
-      </section>
-
-      <section class="classroom">
-        <div class="class">
-          <span>Concept</span>
-          <h3>暮らしに寄り添う<br>
-            小さなお菓子教室</h3>
-
-          <p class="class-2">littole sweetsは、<br>
-            ・・・・・・・・・・・・・・・・・・・・・<br>
-            ・・・・・・・・・・・・・・・・・・・・・<br>
-            ・・・・・・・・・・・・。</p>
-        </div>
-        <img src="img/IMG_3086.JPG" alt="アップル">
-      </section>
-
-      <div class="room">
-        <img src="img/ルーム.JPG" alt="ルーム">
       </div>
 
-      <section>
-        <article>
-          <div class="lesson">
-            <img class="egg" src="img/IMG_3088.JPG" alt="たまご">
-            <img class="cake" src="img/IMG_3087.JPG" alt="ケーキ">
-            <div class="lesson-2">
-              <span>Lesson</span>
-              <h3>レッスン内容</h3>
-              <p>少人数制のレッスンを毎月開催しています。<br>
-                お菓子作り未経験の方も大歓迎です。</p>
-
-              <div class="content">
-                <dl>
-                  <dt>内容</dt>
-                  <dd>季節のイベントや旬のスイーツを<br>お楽しみいただける単発レッスン</dd>
-                </dl>
-
-                <dl>
-                  <dt>所要時間</dt>
-                  <dd>3時間程度</dd>
-                </dl>
-
-                <dl>
-                  <dt>料金</dt>
-                  <dd>1回 4,400円(税込)</dd>
-                </dl>
-
-                <dl>
-                  <dt>持ち物</dt>
-                  <dd>エプロン、ハンドタオル</dd>
-                </dl>
-
-                <dl>
-                  <dt>場所</dt>
-                  <dd>〒⚪︎⚪︎⚪︎-⚪︎⚪︎⚪︎⚪︎<br>
-                    ⚪︎⚪︎都⚪︎区⚪︎⚪︎⚪︎⚪︎⚪︎⚪︎</dd>
-                </dl>
-              </div>
-              <div class="notice-2">
-                <p>ご予約はこちら
-                  <span class="material-symbols-outlined">
-                    arrow_forward_ios
-                  </span>
-                </p>
-              </div>
-            </div>
-        </article>
-      </section>
-
-      <section class="flow">
-        <img class="flow-img" src="img/IMG_3090.JPG" alt="画像背景">
-        <article>
-          <div class="flow-2">
-            <div class="theme">
-              <span>Flow</span>
-              <h3>受講までの流れ</h3>
-            </div>
-
-            <div class="flow-3">
-              <dl>
-                <dt><img src="img/メールボックスアイコン1.png" alt="1"></dt>
-                <dd>
-                  <h4>事前のご予約</h4>
-                  <p>最新のレッスン内容をご確認のうえ、ご予約フォームよりご連絡ください。折り返し、日程調節メールをお送りします。</p>
-                </dd>
-              </dl>
-
-              <dl>
-                <dt><img src="img/家の線画イラスト.png" alt="2"></dt>
-                <dd>
-                  <h4>現地にて集合</h4>
-                  <p>当日は集合時間までに教室へお越しください。エプロン、ハンドタオルはご持参いただくようお願いいたします。</p>
-                </dd>
-              </dl>
-
-              <dl>
-                <dt><img src="img/時計の無料アイコン.png" alt="3"></dt>
-                <dd>
-                  <h4>レッスン開始</h4>
-                  <p>レシピについて講師よりご説明した後、実習形式でお一人ずつお菓子を作ります。所要時間は3時間程度を予定しております。</p>
-                </dd>
-              </dl>
-
-              <dl>
-                <dt><img src="img/フォーク.png" alt="4"></dt>
-                <dd>
-                  <h4>ティータイム</h4>
-                  <p>完成したお菓子を美味しい紅茶と一緒に試食します。専用ケースでそのままお持ち帰りいただくことも可能です。</p>
-                </dd>
-              </dl>
-
-              <dl>
-                <dt><img src="img/お会計.png" alt="5"></dt>
-                <dd>
-                  <h4>受講料</h4>
-                  <p>受講料をお支払いいただき、レッスン終了となります。現金もしくはクレジットカード払いがご利用いただけます。</p>
-                </dd>
-              </dl>
-            </div>
-          </div>
-
-          <div class="flow-4">
-            <article>
-              <div class="theme">
-                <span>Flow</span>
-                <h3>受講までの流れ</h3>
-              </div>
-              <dl>
-                <dt><img src="img/メールボックスアイコン1.png" alt="1"></dt>
-                <dd>
-                  <h4>事前のご予約</h4>
-                  <p>最新のレッスン内容をご確認のうえ、ご予約フォームよりご連絡ください。折り返し、日程調節メールをお送りします。</p>
-                </dd>
-              </dl>
-
-              <dl>
-                <dt><img src="img/家の線画イラスト.png" alt="2"></dt>
-                <dd>
-                  <h4>現地にて集合</h4>
-                  <p>当日は集合時間までに教室へお越しください。エプロン、ハンドタオルはご持参いただくようお願いいたします。</p>
-                </dd>
-              </dl>
-
-              <dl>
-                <dt><img src="img/時計の無料アイコン.png" alt="3"></dt>
-                <dd>
-                  <h4>レッスン開始</h4>
-                  <p>レシピについて講師よりご説明した後、実習形式でお一人ずつお菓子を作ります。所要時間は3時間程度を予定しております。</p>
-                </dd>
-              </dl>
-
-              <dl>
-                <dt><img src="img/フォーク.png" alt="4"></dt>
-                <dd>
-                  <h4>ティータイム</h4>
-                  <p>完成したお菓子を美味しい紅茶と一緒に試食します。専用ケースでそのままお持ち帰りいただくことも可能です。</p>
-                </dd>
-              </dl>
-
-              <dl>
-                <dt><img src="img/お会計.png" alt="5"></dt>
-                <dd>
-                  <h4>受講料</h4>
-                  <p>受講料をお支払いいただき、レッスン終了となります。現金もしくはクレジットカード払いがご利用いただけます。</p>
-                </dd>
-              </dl>
-          </div>
-
-
-
-        </article>
-      </section>
-
-      <section class="information-1">
-        <div class="information">
-          <span>Information</span>
-          <h3>教室のご案内</h3>
-          <img src="img/map.jpeg" alt="マップ">
+      <div class="wonder-explanation--2">
+        <div class="explanation--2">
+          <h5><span>氣エネルギー</span>ってなに？</h5>
+          <p>生命活動の根幹をなすエネルギー源。活動性をもった物質で絶えず動いて全身を選る。人体に原気、宗気、営気、街気の4つ の気があるとされています。</p>
         </div>
-        <div class="information-2">
-          <div class="content">
-            <div class="content-2">
-              <dl>
-                <dt>住所</dt>
-                <dd>〒⚪︎⚪︎⚪︎-⚪︎⚪︎⚪︎⚪︎<br>
-                  ⚪︎⚪︎都⚪︎区⚪︎⚪︎⚪︎</dd>
-              </dl>
+        <img src="img/IMG_0072.JPG">
+      </div>
+    </section>
 
-              <dl>
-                <dt>TEL</dt>
-                <dd>00-0000-0000</dd>
-              </dl>
-
-              <dl>
-                <dt>MAIL</dt>
-                <dd>xxxxxxxxx@xxxxx.com</dd>
-              </dl>
-            </div>
-          </div>
-
-          <div class="lecturer">
-            <small>代表講師</small>
-            <h5>⚪︎⚪︎⚪︎ ⚪︎⚪︎⚪︎⚪︎</h5>
-            <p>製菓専門学校を卒業後、都内の人気洋菓子店でパティシエとして勤務。<br>20018年に独立し、お菓子教室”little
-              sweets”を開業。<br>生徒の皆様が自然と笑顔になれるようなアットホームなお菓子教室を目指しています。</p>
-          </div>
+    <section class="check-list">
+      <divn class="list-text">
+        <h6>氣清流バランスケアが<br>向いている</h6>
         </div>
-      </section>
-    </main>
-    <footer>
-      <div class="scroll-infinity">
-        <div class="scroll-infinity__wrap">
-          <ul class="scroll-infinity__list scroll-infinity__list--right">
-            <li class="scroll-infinity__item"><img src="img/IMG_0045.JPG" /></li>
-            <li class="scroll-infinity__item"><img src="img/IMG_0047.JPG" /></li>
-            <li class="scroll-infinity__item"><img src="img/IMG_0046.JPG" /></li>
-            <li class="scroll-infinity__item"><img src="img/IMG_0048.JPG" /></li>
-            <li class="scroll-infinity__item"><img src="img/IMG_0050.JPG" /></li>
-            <li class="scroll-infinity__item"><img src="img/IMG_0049.JPG" /></li>
-          </ul>
-          <ul class="scroll-infinity__list scroll-infinity__list--right">
-            <li class="scroll-infinity__item"><img src="img/IMG_0045.JPG" /></li>
-            <li class="scroll-infinity__item"><img src="img/IMG_0047.JPG" /></li>
-            <li class="scroll-infinity__item"><img src="img/IMG_0046.JPG" /></li>
-            <li class="scroll-infinity__item"><img src="img/IMG_0048.JPG" /></li>
-            <li class="scroll-infinity__item"><img src="img/IMG_0050.JPG" /></li>
-            <li class="scroll-infinity__item"><img src="img/IMG_0049.JPG" /></li>
+        <div class="list--1">
+          <p>チェックリストでお手軽診断</p>
+          <ul>
+            <li><img src="img/check.png">上半身に炎症が起きやすい（頭術、ニキビなど）</li>
+            <li><img src="img/check.png">時中症になったことがある</li>
+            <li><img src="img/check.png">アトピーや手習修をぷり返す</li>
+            <li><img src="img/check.png">職に圧迫感があり、声を出しづらい</li>
+            <li><img src="img/check.png">顔や手がほてる</li>
+            <li><img src="img/check.png">白目が流しやすい、白目が浮要む</li>
+            <li><img src="img/check.png">席臭や獣臭がたまにする（海が気体で出ている）</li>
           </ul>
         </div>
-      </div>
+    </section>
+  </main>
 
-      <div class="footer">
-        <small>&copy; 2025 little sweets</small>
-      </div>
-    </footer>
-  </div>
+  <script>
+    {
+      const open = document.getElementById('open');
+      const close = document.getElementById('close');
+      const overlay = document.querySelector('overlay');
+
+      open.addEventListener('click', () => {
+        overlay.classList.add('show');
+        open.classList.add('hidden');
+      });
+
+      close.addEventListener('click', () => {
+        overlay.classList.remove('show');
+        close.classList.remove('hidden');
+      });
+    }
+  </script>
 </body>
 
 </html>
