--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
           <p>氣清流バランスケアは氣エネルギーの調整を行い、<br>アトピーなどの症状をはじめ、<br>体の根本改善を目指します。</p>
         </div>
       </div>
+
+      <span class="gradation"></span>
+
       <img class="top--img" src="img/IMG_0076.JPG" alt="coco画像">
     </section>
 
-    <span></span>
 
     <section>
       <article class="top-wrap">
@@ -90,8 +92,12 @@
           <span>がおすすめです。</span>
         </div>
 
+        <span class="gradation-2"></span>
+
         <img class="answer-img1" src="img/IMG_0067-2.JPG" alt="">
         <img class="answer-img2" src="img/IMG_3292-2.JPG" alt="">
+
+        <span class="gradation-3"></span>
 
 
         <img class="answer-img1--pc" src="img/IMG_0067-2.JPG" alt="">
@@ -146,23 +152,20 @@
     </section>
   </main>
 
-  <script>
-    {
-      const open = document.getElementById('open');
-      const close = document.getElementById('close');
-      const overlay = document.querySelector('.overlay');
+  <footer>
+      <img src="img/coco-citta1.png">
+      
+    <ul>
+      <li><a href="">氣清流バランスケアとは</a></li>
+      <li><a href="">メニュー</a></li>
+      <li><a href="">お客様の声</a></li>
+      <li><a href="">アクセス</a></li>
+    </ul>
+    <hr>
+    <small>&copy; 2025 coco-citta</small>
+  </footer>
 
-      open.addEventListener('click', () => {
-        overlay.classList.add('show');
-        open.classList.add('hidden');
-      });
-
-      close.addEventListener('click', () => {
-        overlay.classList.remove('show');
-        open.classList.remove('hidden');
-      });
-    }
-  </script>
+  <script src="main.js"></script>
 </body>
 
 </html>
