--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Beauty salon HP</title>
-  <link rel="icon" href="">
+  <link rel="icon" href="img/IMG_0073.JPG">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="style--more.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -154,7 +154,7 @@
 
   <footer>
       <img src="img/coco-citta1.png">
-      
+
     <ul>
       <li><a href="">氣清流バランスケアとは</a></li>
       <li><a href="">メニュー</a></li>
