--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <img class="text2" src="img/what is that.png" alt="テキスト">
       <br>
       <h4><span>氣清流バランスケア</span>ってナニモノ？</h4>
-      <p>心身ともに健やかであるために必要なこと。それは、氣エネルギーを正常に流動させ、<br>白流の選りと水分代割の帰りを改善すること。<br>
+      <p>心身ともに健やかであるために必要なこと。それは、氣エネルギーを正常に流動させ、白流の選りと水分代割の帰りを改善すること。<br>
         気清流バランスケアは、三白水の気エネルギーに着日し、エネルギー調整することで、<br>肉体園（白液・水分代謝）への伝達と、エネルギー面（魂・スピリチュアル）への伝報から起こる、<br>体内外の容を体感し、細胞レベルで気エネルギーの猪環を正常化させることを目指します。
       </p>
 
