--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li><a href="">メニュー</a></li>
           <li><a href="">お客様の声</a></li>
           <li><a href="">アクセス</a></li>
-          <li><a href=""><img src="img/inquiry.jpeg" alt="説明画像" style="width: 60px; height: 35px;"></a></li>
+          <li><a href="">お問い合わせ</a></li>
         </ul>
     </div>
 
