--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <h1>氣清流バランス</h1>
-    <img src="img/coco-citta1.png" alt="coco-citta画像">
+    <img src="img/text:coco-citta1.webp" alt="coco-citta画像">
 
     <div class="pc-menu">
       <nav>
@@ -52,10 +52,10 @@
   <main>
     <section class="top--title">
       <div class="sp--top--title">
-        <img class="sp--top--img" src="img/IMG_0076--2.JPG" alt="coco画像">
+        <img class="sp-top-img" src="img/sp:top.coco-citta.webp" alt="coco画像">
 
         <div class="main-title">
-          <img src="img/coco-citta2.png" alt="coco-citta画像">
+          <img src="img/text:coco-citta2.webp" alt="coco-citta画像">
           <h2>あなたのための<br>幸せレシピ</h2>
           <p>氣清流バランスケアは氣エネルギーの調整を行い、<br>アトピーなどの症状をはじめ、<br>体の根本改善を目指します。</p>
         </div>
@@ -63,23 +63,23 @@
 
       <span class="gradation"></span>
 
-      <img class="top--img" src="img/IMG_0076.JPG" alt="coco画像">
+      <img class="top--img" src="img/pc:top.coco-citta.webp" alt="coco画像">
     </section>
 
 
     <section>
       <article class="top-wrap">
         <div class="sp--top-wrap">
-          <img src="img/text1.png">
+          <img src="img/text1.webp">
           <h3><span>こんなお悩み</span>ありませんか?</h3>
           <ul class="wrap">
-            <li><img src="img/concerns1.png"><br>
+            <li><img src="img/concerns1.webp"><br>
               治療を続けても<br>ぶり返すアトピー</li>
-            <li><img src="img/concerns2.png"><br>
+            <li><img src="img/concerns2.webp"><br>
               何となく<br>体調が悪い日が続く</li>
-            <li><img src="img/concerns3.png"><br>
+            <li><img src="img/concerns3.webp"><br>
               肩こり・腰痛<br>などがずっと続いている</li>
-            <li><img src="img/concerns4.png"><br>
+            <li><img src="img/concerns4.webp"><br>
               自律神経の<br>乱れを感じる</li>
           </ul>
         </div>
@@ -94,20 +94,20 @@
 
         <span class="gradation-2"></span>
 
-        <img class="answer-img1" src="img/IMG_0067-2.JPG" alt="">
-        <img class="answer-img2" src="img/IMG_3292-2.JPG" alt="">
+        <img class="answer-img1" src="img/pc:main1.coco-citta.webp" alt="">
+        <img class="answer-img2" src="img/pc:main2.coco-citta.webp" alt="">
 
         <span class="gradation-3"></span>
 
 
-        <img class="answer-img1--pc" src="img/IMG_0067-2.JPG" alt="">
-        <img class="answer-img2--pc" src="img/IMG_3292-2.JPG" alt="">
+        <img class="answer-img1--pc" src="img/sp:main1.coco-citta.webp" alt="">
+        <img class="answer-img2--pc" src="img/sp:main2.coco-citta.webp" alt="">
 
       </article>
     </section>
 
     <section class="wonder">
-      <img class="text2" src="img/what is that.png" alt="テキスト">
+      <img class="text2" src="img/what is that.webp" alt="テキスト">
       <br>
       <h4><span>氣清流バランスケア</span>ってナニモノ？</h4>
       <p>心身ともに健やかであるために必要なこと。それは、氣エネルギーを正常に流動させ、白流の選りと水分代割の帰りを改善すること。<br>
@@ -115,7 +115,7 @@
       </p>
 
       <div class="wonder-explanation--1">
-        <img src="img/IMG_0073.JPG">
+        <img src="img/pc:stretch1.webp">
         <div class="explanation--1">
           <h5><span>氣清流</span>ってなに？</h5>
           <p>
@@ -129,7 +129,7 @@
           <h5><span>氣エネルギー</span>ってなに？</h5>
           <p>生命活動の根幹をなすエネルギー源。活動性をもった物質で絶えず動いて全身を選る。人体に原気、宗気、営気、街気の4つ の気があるとされています。</p>
         </div>
-        <img src="img/IMG_0072.JPG">
+        <img src="img/pc:stretch2.webp">
       </div>
     </section>
 
@@ -140,20 +140,20 @@
         <div class="list--1">
           <p>チェックリストでお手軽診断</p>
           <ul>
-            <li><img src="img/check.png">上半身に炎症が起きやすい（頭術、ニキビなど）</li>
-            <li><img src="img/check.png">時中症になったことがある</li>
-            <li><img src="img/check.png">アトピーや手習修をぷり返す</li>
-            <li><img src="img/check.png">職に圧迫感があり、声を出しづらい</li>
-            <li><img src="img/check.png">顔や手がほてる</li>
-            <li><img src="img/check.png">白目が流しやすい、白目が浮要む</li>
-            <li><img src="img/check.png">席臭や獣臭がたまにする（海が気体で出ている）</li>
+            <li><img src="img/check.webp">上半身に炎症が起きやすい（頭術、ニキビなど）</li>
+            <li><img src="img/check.webp">時中症になったことがある</li>
+            <li><img src="img/check.webp">アトピーや手習修をぷり返す</li>
+            <li><img src="img/check.webp">職に圧迫感があり、声を出しづらい</li>
+            <li><img src="img/check.webp">顔や手がほてる</li>
+            <li><img src="img/check.webp">白目が流しやすい、白目が浮要む</li>
+            <li><img src="img/check.webp">席臭や獣臭がたまにする（海が気体で出ている）</li>
           </ul>
         </div>
     </section>
   </main>
 
   <footer>
-    <img src="img/coco-citta1.png">
+    <img src="img/text:coco-citta1.webp">
 
     <ul>
       <li><a href="">氣清流バランスケアとは</a></li>
