--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Beauty salon HP</title>
-  <link rel="icon" href="img/IMG_0073.JPG">
+  <link rel="icon" href="img/pc:stretch1.webp">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="style--more.css">
+  <link rel="stylesheet" href="marketing.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
