--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <divn class="list-text">
         <h6>氣清流バランスケアが<br>向いている</h6>
         </div>
-        <div class="list--1">
+        <div class="list-1">
           <p>チェックリストでお手軽診断</p>
           <ul>
             <li><img src="img/check.webp">上半身に炎症が起きやすい（頭術、ニキビなど）</li>
