--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         気清流バランスケアは、三白水の気エネルギーに着日し、エネルギー調整することで、<br>肉体園（白液・水分代謝）への伝達と、エネルギー面（魂・スピリチュアル）への伝報から起こる、<br>体内外の容を体感し、細胞レベルで気エネルギーの猪環を正常化させることを目指します。
       </p>
 
-      <div class="wonder-explanation--1">
+      <div class="wonder-explanation-1">
         <img src="img/pc:stretch1.webp">
         <div class="explanation--1">
           <h5><span>氣清流</span>ってなに？</h5>
@@ -124,7 +124,7 @@
         </div>
       </div>
 
-      <div class="wonder-explanation--2">
+      <div class="wonder-explanation-2">
         <div class="explanation--2">
           <h5><span>氣エネルギー</span>ってなに？</h5>
           <p>生命活動の根幹をなすエネルギー源。活動性をもった物質で絶えず動いて全身を選る。人体に原気、宗気、営気、街気の4つ の気があるとされています。</p>
