--- a/index.html
+++ b/index.html
@@ -134,21 +134,21 @@
     </section>
 
     <section class="check-list">
-      <divn class="list-text">
+      <div class="list-text">
         <h6>氣清流バランスケアが<br>向いている</h6>
-        </div>
-        <div class="list-1">
-          <p>チェックリストでお手軽診断</p>
-          <ul>
-            <li><img src="img/check.webp">上半身に炎症が起きやすい（頭術、ニキビなど）</li>
-            <li><img src="img/check.webp">時中症になったことがある</li>
-            <li><img src="img/check.webp">アトピーや手習修をぷり返す</li>
-            <li><img src="img/check.webp">職に圧迫感があり、声を出しづらい</li>
-            <li><img src="img/check.webp">顔や手がほてる</li>
-            <li><img src="img/check.webp">白目が流しやすい、白目が浮要む</li>
-            <li><img src="img/check.webp">席臭や獣臭がたまにする（海が気体で出ている）</li>
-          </ul>
-        </div>
+      </div>
+      <div class="list-1">
+        <p>チェックリストでお手軽診断</p>
+        <ul>
+          <li><img src="img/check.webp">上半身に炎症が起きやすい（頭術、ニキビなど）</li>
+          <li><img src="img/check.webp">時中症になったことがある</li>
+          <li><img src="img/check.webp">アトピーや手習修をぷり返す</li>
+          <li><img src="img/check.webp">職に圧迫感があり、声を出しづらい</li>
+          <li><img src="img/check.webp">顔や手がほてる</li>
+          <li><img src="img/check.webp">白目が流しやすい、白目が浮要む</li>
+          <li><img src="img/check.webp">席臭や獣臭がたまにする（海が気体で出ている）</li>
+        </ul>
+      </div>
     </section>
   </main>
 
