--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
       <div class="wonder-explanation-1">
         <img src="img/pc:stretch1.webp">
-        <div class="explanation--1">
+        <div class="explanation-1">
           <h5><span>氣清流</span>ってなに？</h5>
           <p>
             身能では「共常なし」と言われる。不定（染島）や要代用（うつ、バニック、自体調。00度旅日、アトピーなど）を。東洋医学や部車医学アーコルグェーダの点からカウンセリングし、結と心食のアンバランスでこる。新ネルギーの男期限を直常化させる諸術法です。
@@ -125,7 +125,7 @@
       </div>
 
       <div class="wonder-explanation-2">
-        <div class="explanation--2">
+        <div class="explanation-2">
           <h5><span>氣エネルギー</span>ってなに？</h5>
           <p>生命活動の根幹をなすエネルギー源。活動性をもった物質で絶えず動いて全身を選る。人体に原気、宗気、営気、街気の4つ の気があるとされています。</p>
         </div>
